# xai-rabbitmq

./: README.md  pyproject.toml  rabbitmq_components.py  rabbitmq_sample.xircuits
.github/workflows/: run-workflow-tests.yml
examples/: rabbitmq_sample.xircuits
