[project]
name = "xai-rabbitmq"
version = "0.1.0"
description = "Xircuits component library for RabbitMQ"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "MIT"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-rabbitmq"
keywords = ["xircuits", "rabbitmq", "message broker", "messaging"]

dependencies = [
    "pika==1.3.2"
]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/rabbitmq_sample.xircuits"
requirements_path = "requirements.txt"
